# grpc_graphql_gateway_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  FEDERATION.md  README.md  build.rs
examples/federation/: compose_supergraph.sh  main.rs  supergraph.yaml
examples/graphql/: main.rs
examples/greeter/: main.rs
proto/: federation_example.proto  graphql.proto
src/: dataloader.rs  error.rs  federation.rs  gateway.rs  grpc_client.rs  lib.rs  middleware.rs  runtime.rs  schema.rs  types.rs
